destination-rule-disable.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: disable-mtls-my-app
  namespace: default
spec:
  host: my-sample-app-my-app.default.svc.cluster.local 
  trafficPolicy:
    tls:
      mode: DISABLE
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
