networking.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: my-gateway
spec:
  selector:
    app: istio-ingress
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: my-app-routing
spec:
  hosts:
  - "*"
  gateways:
  - my-gateway
  http:
  - match:
    - headers:
        end-user:
          exact: tintin
    route:
    - destination:
        host: my-sample-app-my-app.default.svc.cluster.local
        subset: v2
  - route: # 그 외 모든 경우 (기본값)
    - destination:
        host: my-sample-app-my-app.default.svc.cluster.local
        subset: v1
